--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = ""
 authors = ["Piero Macaluso <pieromacaluso8@gmail.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.6.2"
+python = "=3.6.2"
 torch = "^1.8.1"
 torchvision = "^0.9.1"
 torchaudio = "^0.8.1"
